--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
       
 
       <div class="box" data-aos="fade-up"><img class="image" src="./pictures/sew.jpg" alt="" srcset="">
-        <div class="overlay"><a href="./newpage/index.html">
-          <div class="text"><span class="overlay-text">SEW</span><br><br> Concept,Branding,Mobile UI/UX</div> </a>
+        <div class="overlay">
+            <a href="./newpage/index.html">
+              <div class="text"><span class="overlay-text">SEW</span><br><br> Concept,Branding,Mobile UI/UX</div>
+            </a>
         </div>
       </div>
       <div class="box" data-aos="fade-up"><img class="image" src="./pictures/coming soon.jpg" alt="" srcset="">
